// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 20px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  max-width: 35px;
}

<div
    class="c0"
  >
    <a
      class="c1"
      href="/"
    >
      <img
        alt="github logo"
        class=""
        src="images/logo/github.png"
      />
    </a>
  </div>
</DocumentFragment>
`;

exports[`should render style correctly when condition is true 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 50px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  max-width: 50px;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
      href="/"
    >
      <img
        alt="github logo"
        class=""
        src="images/logo/github.png"
      />
    </a>
  </div>
</div>
`;
